<resources>

    <string name="app_name"> Alarm Clock with Deezer </string>
    <string name="activity_radio"> Deezer Radios </string>
    <string name="activity_home"> %1$s - Home </string>

    <!-- Widgets -->
    <string name="empty">  </string>
    <string name="default_duration"> 0:00 </string>
    <string name="login"> Deezer Login </string>
    <string name="logout"> Logout </string>
    <string name="visualizer_wf"> Waveform </string>
    <string name="visualizer_fft"> FFT </string>
    <string name="equalizer"> Equalizer </string>
    <string name="unloggedRadios"> Radios (without connection) </string>

    <!-- Playlist Options -->
    <string name="options"> Options </string>
    <string name="start"> Start </string>
    <string name="stop"> Stop </string>
    <string name="none"> None </string>
    <string name="clock"> Clock </string>
    <string name="music"> Music </string>
    <string name="settings"> Settings </string>
    <string name="hour"> Hour </string>
    <string name="Options_sens"> Send </string>
    <string name="repeat"> Repeat </string>
    <string name="snooze"> Snooze : </string>
    <string name="minute"> min </string>
    <string name="fade_in_out"> Fade in / Fade out </string>
    <string name="notification"> Notification </string>
    <string name="Cancel"> Cancel </string>

    <!-- Error messages -->
    <string name="no_results"> No results found </string>
    <string name="deezer_error_during_login"> Deezer error during login </string>
    <string name="deezer_too_many_skips"> You have skipped too many tracks in this radio. Skip will be disabled for a while </string>
    <string name="invalid_credentials"> Invalid credentials </string>
    <string name="login_cancelled"> Login cancelled </string>
    <string name="ui_custom_track_list"> This activity plays a custom list of tracks </string>
    <string name="ui_user_flow"> This activity plays a custom list of tracks </string>
    <string name="bass"> Bass Freqs. </string>
    <string name="treble"> Treble Freqs. </string>
</resources>