<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_background"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageButton
        android:id="@+id/button_previous"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_menu"
        android:src="@drawable/ic_action_previous"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_alignTop="@+id/buttonLogin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_previous"
        android:id="@+id/buttonLogin"
        android:text="@string/login"
        android:layout_margin="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonVisualizerFFT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/visualizer_fft" />

        <Button
            android:id="@+id/buttonVisualizerWaveform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/visualizer_wf" />

        <Button
            android:id="@+id/buttonEqualizer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equalizer" />
    </LinearLayout>

</RelativeLayout>